--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -55,6 +55,54 @@
             margin: 0 auto;
         }
     </style>
+    <style type="text/css">
+        .wrapper {
+            text-align: center;
+            max-width: 90%;
+            margin: 0 auto;
+            font-size: 18px;
+        }
+    </style>
+    <style type="text/css">
+        table {
+            width: 80%;
+            margin: 20px auto;
+        }
+
+        table,
+        th,
+        td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            vertical-align: top;
+        }
+
+        th,
+        td {
+            padding: 15px;
+            text-align: left;
+        }
+
+        #t01 tr:nth-child(even) {
+            background-color: #eee;
+        }
+
+        #t01 tr:nth-child(odd) {
+            background-color: #fff;
+        }
+
+        #t01 th {
+            background-color: rgb(78, 76, 76);
+            background-color: #925354;
+            color: white;
+        }
+
+        header,
+        footer {
+            padding: 20px;
+            font-size: 22px;
+        }
+    </style>
 </head>
 
 <body class="clean-body" style="
