update email service

--- a/views/orderConfirmation.hbs
+++ b/views/orderConfirmation.hbs
@@ -33,7 +33,7 @@
         {{/each}}
         <tr>
             <th colspan="2">Suma zamówienia</th>
-            <th>35660</th>
+            <th>{{order.value}} zł netto</th>
         </tr>
     </table>
     <table id="t01">
