add mailing numbers to Orders

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -60,7 +60,7 @@
             text-align: center;
             max-width: 90%;
             margin: 0 auto;
-            font-size: 18px;
+            font-size: 16px;
         }
     </style>
     <style type="text/css">
@@ -79,7 +79,7 @@
 
         th,
         td {
-            padding: 15px;
+            padding: 10px;
             text-align: left;
         }
 
@@ -92,9 +92,8 @@
         }
 
         #t01 th {
-            background-color: rgb(78, 76, 76);
-            background-color: #925354;
-            color: white;
+            background-color: rgb(217, 217, 217);
+            color: #000;
         }
 
         header,
